Move WiredNode default methods to the impl